# JNIDemo

./: .gitignore  .hgignore  README.md  instapk.properties  settings.gradle
ccalljava/: CMakeLists.txt  build.gradle
ccalljava/src/main/: AndroidManifest.xml
ccalljava/src/main/cpp/: CCallJava.cpp  MyNativeCodeWithLog.cpp  native-lib.cpp
ccalljava/src/main/res/layout/: activity_another.xml  activity_main.xml
ccalljava/src/main/res/values/: strings.xml
ffmpegmodel/: build.gradle
ffmpegmodel/src/main/: AndroidManifest.xml
ffmpegmodel/src/main/res/layout/: activity_main.xml
ffmpegmodel/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
guolu/: CMakeLists.txt  build.gradle
guolu/src/main/: AndroidManifest.xml
guolu/src/main/cpp/: GuoLu.cpp
guolu/src/main/res/layout/: activity_main.xml
guolu/src/main/res/values/: strings.xml
javacallc/: CMakeLists.txt  build.gradle
javacallc/src/main/: AndroidManifest.xml
javacallc/src/main/cpp/: javacallc.cpp
javacallc/src/main/res/layout/: activity_main.xml
javacallc/src/main/res/values/: strings.xml
jnisomodel/: build.gradle
jnisomodel/src/main/: AndroidManifest.xml
jnisomodel/src/main/res/layout/: activity_main.xml
jnisomodel/src/main/res/values/: strings.xml
mtxx/: build.gradle
mtxx/src/main/: AndroidManifest.xml
mutillibs/: CMakeLists.txt  build.gradle
mutillibs/src/androidTest/java/com/example/mutillibs/: ExampleInstrumentedTest.java
mutillibs/src/main/: AndroidManifest.xml
mutillibs/src/main/cpp/: one.cpp  two.cpp
mutillibs/src/main/java/com/example/mutillibs/: JNI.java  MainActivity.java
mutillibs/src/main/res/layout/: activity_main.xml
mutillibs/src/main/res/values/: strings.xml
mutillibs/src/test/java/com/example/mutillibs/: ExampleUnitTest.java
(+25 files in other folders)
